--- a/package.json
+++ b/package.json
@@ -1,39 +1,6 @@
 {
-  "name": "truevo-registry",
-  "version": "1.0.0",
-  "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.3.2",
-    "@supabase/supabase-js": "^2.90.1",
-    "date-fns": "^3.0.6",
-    "dompurify": "^3.0.6",
-    "lucide-react": "^0.309.0",
-    "marked": "^11.1.1",
-    "next": "14.2.13",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.48.2",
-    "react-quill": "^2.0.0",
-    "react-router-dom": "^7.12.0",
-    "react-toastify": "^10.0.4",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@types/dompurify": "^3.0.5",
-    "@types/node": "^20.10.6",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.23",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.19",
-    "typescript": "^5.3.3"
+    "postbuild": "cp -r public .next/out/ && cp _redirects .next/out/ && cp _headers .next/out/ || true"
   }
 }
