--- a/package.json
+++ b/package.json
@@ -1,5 +1,23 @@
 {
+  "name": "truevo-registry",
+  "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "build": "npm install && next build"
+    "build": "npm install --production=false && next build",
+    "export": "next export",
+    "deploy": "npm run build && npm run export"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.39.7",
+    "next": "14.2.13",
+    "react": "^18",
+    "react-dom": "^18"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.13",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
