--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true, 
   "scripts": { 
     "dev": "next dev", 
+    "postbuild": "rm -rf .next/cache/webpack && echo 'Removed webpack cache'"
     "build": "next build", 
     "start": "next start", 
     "lint": "next lint" 
@@ -22,3 +23,4 @@
     "tailwindcss": "^3.3.0" 
   } 
 } 
+
