--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
+    "critters": "^0.0.21",
     "next": "^14.2.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -22,3 +23,4 @@
     "tailwindcss": "^3.4.0"
   }
 }
+
