--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "truevo-registry",
   "version": "1.0.0",
   "private": true,
+ {
   "scripts": {
+    "build": "next build",
     "dev": "next dev",
-    "build": "next build && next export",
-    "start": "next start",
-    "lint": "next lint"
-  },
+    "start": "next start"
+  }
+}
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
     "critters": "0.0.23",
@@ -23,4 +24,5 @@
     "tailwindcss": "^3.4.0"
   }
 }
+
 
