--- a/package.json
+++ b/package.json
@@ -2,27 +2,27 @@
   "name": "truevo-registry",
   "version": "1.0.0",
   "private": true,
- {
   "scripts": {
-    "build": "next build",
     "dev": "next dev",
-    "start": "next start"
-  }
-}
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.7",
-    "critters": "0.0.23",
+    "@supabase/supabase-js": "^2.39.0",
     "next": "14.2.35",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.56.0",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.35",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0"
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
-
-
