--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
     "next": "14.2.35",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "20.19.29",
-    "@types/react": "18.3.27",
-    "@types/react-dom": "18.3.7",
+    "@types/node": "^25.0.8",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
-    "eslint": "8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.35",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.11",
